--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,84 +1,158 @@
----
----
-
-@string{aps = {American Physical Society,}}
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@article{Gallagher2023,
+  title     = {Global Shortfalls in Threat Assessments for Endemic Flora by Country},
+  journal   = {Plants People Planet},
+  year      = {2023},
+  html      = {https://nph.onlinelibrary.wiley.com/doi/full/10.1002/ppp3.10369},
+  volume    = {5},
+  number    = {6},
+  pages     = {885-898},
+  author    = {Gallagher, R.V. and Allen, S.P. and Govaerts, R. and Rivers, M.C. and Allen, A.P. and Keith, D.A. and Merow, C. and Maitner, B. and Butt, N. and Auld, T.D. and Enquist, B.J. and Eiserhardt, W.L. and Wright, I.J. and Mifsud, J.C.O. and Espinosa-Ruiz, S. and Possingham, H. and Adams, V.M.}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+@article{Costa2023,
+  title     = {Limited Cross-Species Virus Transmission in a Spatially Restricted Coral Reef Fish Community},
+  journal   = {Virus Evolution},
+  html      = {https://academic.oup.com/ve/article/9/1/vead011/7023158},
+  year      = {2023},
+  volume    = {9},
+  number    = {1},
+  author    = {Costa, V.A. and Bellwood, D.R. and Mifsud, J.C.O. and Van Brussel, K. and Geoghegan, J.L. and Holmes, E.C. and Harvey, E.}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  selected={true}
+@article{Mifsud2023a,
+  title     = {Identification of a Novel Papillomavirus from a New Zealand Fur Seal (Arctocephalus forsteri) with Oral Papilloma-Like Lesions},
+  html       = {http://dx.doi.org/10.1101/2023.11.20.567757},
+  DOI       = {10.1101/2023.11.20.567757},
+  journal   = {bioRxiv},
+  publisher = {Cold Spring Harbor Laboratory},
+  author    = {Mifsud, Jonathon C.O. and Hall, Jane and Van Brussel, Kate and Rose, Karrie and Parry, Rhys H. and Holmes, Edward C. and Harvey, Erin},
+  year      = {2023},
+  month     = {nov}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@article{Petrone2023,
+  title     = {Evidence for an Ancient Aquatic Origin of the RNA Viral Order Articulavirales},
+  volume    = {120},
+  ISSN      = {1091-6490},
+  html       = {http://dx.doi.org/10.1073/pnas.2310529120},
+  DOI       = {10.1073/pnas.2310529120},
+  number    = {45},
+  journal   = {Proceedings of the National Academy of Sciences},
+  publisher = {Proceedings of the National Academy of Sciences},
+  author    = {Petrone, Mary E. and Parry, Rhys and Mifsud, Jonathon C. O. and Van Brussel, Kate and Voorhees, Ian E. H. and Richards, Zoe T. and Holmes, Edward C.},
+  year      = {2023},
+  month     = {oct}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@article{Harvey2023a,
+  title     = {Divergent Hepaciviruses, Delta-Like Viruses, and a Chu-Like Virus in Australian Marsupial Carnivores (Dasyurids)},
+  volume    = {9},
+  ISSN      = {2057-1577},
+  html       = {http://dx.doi.org/10.1093/ve/vead061},
+  DOI       = {10.1093/ve/vead061},
+  number    = {2},
+  journal   = {Virus Evolution},
+  publisher = {Oxford University Press (OUP)},
+  author    = {Harvey, Erin and Mifsud, Jonathon C O and Holmes, Edward C and Mahar, Jackie E},
+  year      = {2023},
+  month     = {jul}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@article{Sadiq2023,
+  title     = {Australian Terrestrial Environments Harbour Extensive RNA Virus Diversity},
+  html       = {http://dx.doi.org/10.1101/2023.10.09.561620},
+  journal   = {bioRxiv},
+  DOI       = {10.1101/2023.10.09.561620},
+  publisher = {Cold Spring Harbor Laboratory},
+  author    = {Sadiq, Sabrina and Harvey, Erin and Mifsud, Jonathon C. O. and Minasny, Budiman and McBratney, Alex. B. and Pozza, Liana E. and Mahar, Jackie E. and Holmes, Edward C.},
+  year      = {2023},
+  month     = {oct}
 }
 
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
+@article{Costa2023a,
+  title     = {Host Adaptive Radiation is Associated with Rapid Virus Diversification and Cross-Species Transmission in African Cichlid Fishes},
+  html       = {http://dx.doi.org/10.1101/2023.06.28.546811},
+  journal   = {bioRxiv},
+  DOI       = {10.1101/2023.06.28.546811},
+  publisher = {Cold Spring Harbor Laboratory},
+  author    = {Costa, Vincenzo A. and Ronco, Fabrizia and Mifsud, Jonathon C.O. and Harvey, Erin and Salzburger, Walter and Holmes, Edward C.},
+  year      = {2023},
+  month     = {jun}
+}
+
+@article{Mifsud2022a,
+  title     = {Transcriptome Mining Extends the Host Range of the Flaviviridae to Non-Bilaterians},
+  volume    = {9},
+  ISSN      = {2057-1577},
+  html       = {http://dx.doi.org/10.1093/ve/veac124},
+  DOI       = {10.1093/ve/veac124},
+  number    = {1},
+  journal   = {Virus Evolution},
+  publisher = {Oxford University Press (OUP)},
+  author    = {Mifsud, Jonathon C O and Costa, Vincenzo A and Petrone, Mary E and Marzinelli, Ezequiel M and Holmes, Edward C and Harvey, Erin},
+  year      = {2022},
+  month     = {dec}
+}
+
+@article{Mifsud2022b,
+  title     = {Transcriptome Mining Expands Knowledge of RNA Viruses across the Plant Kingdom},
+  volume    = {96},
+  ISSN      = {1098-5514},
+  html       = {http://dx.doi.org/10.1128/jvi.00260-22},
+  DOI       = {10.1128/jvi.00260-22},
+  number    = {24},
+  journal   = {Journal of Virology},
+  publisher = {American Society for Microbiology},
+  author    = {Mifsud, Jonathon C. O. and Gallagher, Rachael V. and Holmes, Edward C. and Geoghegan, Jemma L.},
+  editor    = {Simon, Anne E.},
+  year      = {2022},
+  month     = {dec}
+}
+
+@article{Miller2021,
+    title = {Slippery when wet: cross-species transmission of divergent coronaviruses in bony and jawless fish and the evolutionary history of the Coronaviridae},
+    volume = {7},
+    ISSN = {2057-1577},
+    html = {http://dx.doi.org/10.1093/ve/veab050},
+    DOI = {10.1093/ve/veab050},
+    number = {2},
+    journal = {Virus Evolution},
+    publisher = {Oxford University Press (OUP)},
+    author = {Miller, Allison K and Mifsud, Jonathon C O and Costa, Vincenzo A and Grimwood, Rebecca M and Kitson, Jane and Baker, Cindy and Brosnahan, Cara L and Pande, Anjali and Holmes, Edward C and Gemmell, Neil J and Geoghegan, Jemma L},
+    year = {2021},
+    month = {May}
+}
+
+@article{Costa2021,
+    doi = {10.1093/ve/veab034},
+    html = {https://doi.org/10.1093/ve/veab034},
+    year = {2021},
+    month = {Jan},
+    publisher = {Oxford University Press (OUP)},
+    volume = {7},
+    number = {1},
+    author = {Costa, Vincenzo A and Mifsud, Jonathon C O and Gilligan, Dean and Williamson, Jane E and Holmes, Edward C and Geoghegan, Jemma L},
+    title = {Metagenomic sequencing reveals a lack of virus exchange between native and invasive freshwater fish across the Murray–Darling Basin, Australia},
+    journal = {Virus Evolution}
+}
+
+@article{Geoghegan2021,
+    doi = {10.1093/ve/veab005},
+    html = {https://doi.org/10.1093/ve/veab005},
+    year = {2021},
+    month = {Jan},
+    publisher = {Oxford University Press (OUP)},
+    volume = {7},
+    number = {1},
+    author = {Geoghegan, Jemma L and Di Giallonardo, Francesca and Wille, Michelle and Ortiz-Baez, Ayda Susana and Costa, Vincenzo A and Ghaly, Timothy and Mifsud, Jonathon C O and Turnbull, Olivia M H and Bellwood, David R and Williamson, Jane E and Holmes, Edward C},
+    title = {Virome composition in marine fish revealed by meta-transcriptomics},
+    journal = {Virus Evolution}
+}
+
+@mastersthesis{mifsud2020explorations,
+  title={Explorations of the Plant Virosphere},
+  author={Mifsud, Jonathon CO},
+  year={2020},
+  school={Macquarie University},
+  html={https://figshare.mq.edu.au/articles/thesis/Explorations_of_the_plant_virosphere/21114349}
 }
