add publication images

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,6 +6,7 @@
   volume    = {5},
   number    = {6},
   pages     = {885-898},
+  preview   = {Gallagher2023.jpg},
   author    = {Gallagher, R.V. and Allen, S.P. and Govaerts, R. and Rivers, M.C. and Allen, A.P. and Keith, D.A. and Merow, C. and Maitner, B. and Butt, N. and Auld, T.D. and Enquist, B.J. and Eiserhardt, W.L. and Wright, I.J. and Mifsud, J.C.O. and Espinosa-Ruiz, S. and Possingham, H. and Adams, V.M.}
 }
 
@@ -16,17 +17,21 @@
   year      = {2023},
   volume    = {9},
   number    = {1},
+  preview   = {Costa2023.jpg},
   author    = {Costa, V.A. and Bellwood, D.R. and Mifsud, J.C.O. and Van Brussel, K. and Geoghegan, J.L. and Holmes, E.C. and Harvey, E.}
 }
 
 @article{Mifsud2023a,
   title     = {Identification of a Novel Papillomavirus from a New Zealand Fur Seal (Arctocephalus forsteri) with Oral Papilloma-Like Lesions},
   html       = {http://dx.doi.org/10.1101/2023.11.20.567757},
+  supp    = {https://github.com/JonathonMifsud/Identification-of-a-novel-papillomavirus-in-a-New-Zealand-Fur-seal-with-oral-papilloma},
   DOI       = {10.1101/2023.11.20.567757},
   journal   = {bioRxiv},
   publisher = {Cold Spring Harbor Laboratory},
   author    = {Mifsud, Jonathon C.O. and Hall, Jane and Van Brussel, Kate and Rose, Karrie and Parry, Rhys H. and Holmes, Edward C. and Harvey, Erin},
   year      = {2023},
+  preview  = {Mifsud2023a.jpg},
+  selected={true},
   month     = {nov}
 }
 
@@ -41,6 +46,7 @@
   publisher = {Proceedings of the National Academy of Sciences},
   author    = {Petrone, Mary E. and Parry, Rhys and Mifsud, Jonathon C. O. and Van Brussel, Kate and Voorhees, Ian E. H. and Richards, Zoe T. and Holmes, Edward C.},
   year      = {2023},
+  preview   = {Petrone2023.jpg},
   month     = {oct}
 }
 
@@ -52,6 +58,7 @@
   DOI       = {10.1093/ve/vead061},
   number    = {2},
   journal   = {Virus Evolution},
+  preview   = {Harvey2023a.jpg},
   publisher = {Oxford University Press (OUP)},
   author    = {Harvey, Erin and Mifsud, Jonathon C O and Holmes, Edward C and Mahar, Jackie E},
   year      = {2023},
@@ -66,6 +73,7 @@
   publisher = {Cold Spring Harbor Laboratory},
   author    = {Sadiq, Sabrina and Harvey, Erin and Mifsud, Jonathon C. O. and Minasny, Budiman and McBratney, Alex. B. and Pozza, Liana E. and Mahar, Jackie E. and Holmes, Edward C.},
   year      = {2023},
+  preview   = {Sadiq2023.jpg},
   month     = {oct}
 }
 
@@ -77,10 +85,11 @@
   publisher = {Cold Spring Harbor Laboratory},
   author    = {Costa, Vincenzo A. and Ronco, Fabrizia and Mifsud, Jonathon C.O. and Harvey, Erin and Salzburger, Walter and Holmes, Edward C.},
   year      = {2023},
+  preview   = {Costa2023a.jpg},
   month     = {jun}
 }
 
-@article{Mifsud2022a,
+@article{Mifsud2023b,
   title     = {Transcriptome Mining Extends the Host Range of the Flaviviridae to Non-Bilaterians},
   volume    = {9},
   ISSN      = {2057-1577},
@@ -88,10 +97,13 @@
   DOI       = {10.1093/ve/veac124},
   number    = {1},
   journal   = {Virus Evolution},
+  supp      = {https://github.com/JonathonMifsud/Transcriptome_mining_extends_the_host_range_of_the_Flaviviridae_to_non-bilaterians},
+  preview   = {Mifsud2022a.jpg},
   publisher = {Oxford University Press (OUP)},
   author    = {Mifsud, Jonathon C O and Costa, Vincenzo A and Petrone, Mary E and Marzinelli, Ezequiel M and Holmes, Edward C and Harvey, Erin},
-  year      = {2022},
-  month     = {dec}
+  year      = {2023},
+  selected={true},
+  month     = {jan}
 }
 
 @article{Mifsud2022b,
@@ -102,10 +114,12 @@
   DOI       = {10.1128/jvi.00260-22},
   number    = {24},
   journal   = {Journal of Virology},
+  preview  = {Mifsud2022b.jpg},
   publisher = {American Society for Microbiology},
   author    = {Mifsud, Jonathon C. O. and Gallagher, Rachael V. and Holmes, Edward C. and Geoghegan, Jemma L.},
   editor    = {Simon, Anne E.},
   year      = {2022},
+  selected={true},
   month     = {dec}
 }
 
@@ -115,11 +129,13 @@
     ISSN = {2057-1577},
     html = {http://dx.doi.org/10.1093/ve/veab050},
     DOI = {10.1093/ve/veab050},
+    preview = {Miller2021.jpg},
     number = {2},
     journal = {Virus Evolution},
     publisher = {Oxford University Press (OUP)},
-    author = {Miller, Allison K and Mifsud, Jonathon C O and Costa, Vincenzo A and Grimwood, Rebecca M and Kitson, Jane and Baker, Cindy and Brosnahan, Cara L and Pande, Anjali and Holmes, Edward C and Gemmell, Neil J and Geoghegan, Jemma L},
+    author = {Miller<sup>*</sup>, Allison K and Mifsud<sup>*</sup>, Jonathon C O and Costa<sup>*</sup>, Vincenzo A and Grimwood, Rebecca M and Kitson, Jane and Baker, Cindy and Brosnahan, Cara L and Pande, Anjali and Holmes, Edward C and Gemmell, Neil J and Geoghegan, Jemma L},
     year = {2021},
+    selected={true},
     month = {May}
 }
 
@@ -129,6 +145,7 @@
     year = {2021},
     month = {Jan},
     publisher = {Oxford University Press (OUP)},
+    preview  = {Costa2021.jpg},
     volume = {7},
     number = {1},
     author = {Costa, Vincenzo A and Mifsud, Jonathon C O and Gilligan, Dean and Williamson, Jane E and Holmes, Edward C and Geoghegan, Jemma L},
@@ -142,6 +159,7 @@
     year = {2021},
     month = {Jan},
     publisher = {Oxford University Press (OUP)},
+    preview = {Geoghegan2021.jpg},
     volume = {7},
     number = {1},
     author = {Geoghegan, Jemma L and Di Giallonardo, Francesca and Wille, Michelle and Ortiz-Baez, Ayda Susana and Costa, Vincenzo A and Ghaly, Timothy and Mifsud, Jonathon C O and Turnbull, Olivia M H and Bellwood, David R and Williamson, Jane E and Holmes, Edward C},
@@ -152,7 +170,8 @@
 @mastersthesis{mifsud2020explorations,
   title={Explorations of the Plant Virosphere},
   author={Mifsud, Jonathon CO},
-  year={2020},
-  school={Macquarie University},
+  year={2021},
+  school={Macquarie University, Master of Research},
+  preview={mifsud2020explorations.jpg},
   html={https://figshare.mq.edu.au/articles/thesis/Explorations_of_the_plant_virosphere/21114349}
 }
