--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,26 +1,3 @@
-@article{Gallagher2023,
-  title     = {Global Shortfalls in Threat Assessments for Endemic Flora by Country},
-  journal   = {Plants People Planet},
-  year      = {2023},
-  html      = {https://nph.onlinelibrary.wiley.com/doi/full/10.1002/ppp3.10369},
-  volume    = {5},
-  number    = {6},
-  pages     = {885-898},
-  preview   = {Gallagher2023.jpg},
-  author    = {Gallagher, R.V. and Allen, S.P. and Govaerts, R. and Rivers, M.C. and Allen, A.P. and Keith, D.A. and Merow, C. and Maitner, B. and Butt, N. and Auld, T.D. and Enquist, B.J. and Eiserhardt, W.L. and Wright, I.J. and Mifsud, J.C.O. and Espinosa-Ruiz, S. and Possingham, H. and Adams, V.M.}
-}
-
-@article{Costa2023,
-  title     = {Limited Cross-Species Virus Transmission in a Spatially Restricted Coral Reef Fish Community},
-  journal   = {Virus Evolution},
-  html      = {https://academic.oup.com/ve/article/9/1/vead011/7023158},
-  year      = {2023},
-  volume    = {9},
-  number    = {1},
-  preview   = {Costa2023.jpg},
-  author    = {Costa, V.A. and Bellwood, D.R. and Mifsud, J.C.O. and Van Brussel, K. and Geoghegan, J.L. and Holmes, E.C. and Harvey, E.}
-}
-
 @article{Mifsud2023a,
   title     = {Identification of a Novel Papillomavirus from a New Zealand Fur Seal (Arctocephalus forsteri) with Oral Papilloma-Like Lesions},
   html       = {http://dx.doi.org/10.1101/2023.11.20.567757},
@@ -50,6 +27,30 @@
   month     = {oct}
 }
 
+@article{Sadiq2023,
+  title     = {Australian Terrestrial Environments Harbour Extensive RNA Virus Diversity},
+  html       = {http://dx.doi.org/10.1101/2023.10.09.561620},
+  journal   = {bioRxiv},
+  DOI       = {10.1101/2023.10.09.561620},
+  publisher = {Cold Spring Harbor Laboratory},
+  author    = {Sadiq, Sabrina and Harvey, Erin and Mifsud, Jonathon C. O. and Minasny, Budiman and McBratney, Alex. B. and Pozza, Liana E. and Mahar, Jackie E. and Holmes, Edward C.},
+  year      = {2023},
+  preview   = {Sadiq2023.jpg},
+  month     = {oct}
+}
+
+@article{SOTWP2023,
+  author = {Antonelli, A. and Fry, C. and Smith, R. J. and Eden, J. and Govaerts, R. H. A. and Kersey, P. and Nic Lughadha, E. and Onstein, R. E. and Simmonds, M. S. J. and Zizka, A. and Ackerman, J. D. and Adams, V. M. and Ainsworth, A. M. and Albouy, C. and Allen, A. P. and Allen, S. P. and Allio, R. and Auld, T. D. and Bachman, S. P. and Baker, W. J. and Barrett, R. L. and Beaulieu, J. M. and Bellot, S. and Black, N. and Boehnisch, G. and Bogarín, D. and Boyko, J. D. and Brown, M. J. M. and Budden, A. and Bureš, P. and Butt, N. and Cabral, A. and Cai, L. and Aguilar-Cano, J. and Chang, Y. and Charitonidou, M. and Chau, J. H. and Cheek, M. and Chomicki, G. and Coiro, M. and Colli-Silva, M. and Condamine, F. L. and Crayn, D. M. and Cribb, P. and Cuervo-Robayo, A. P. and Dahlberg, A. and Deklerck, V. and Denelle, P. and Dhanjal-Adams, K. L. and Druzhinina, I. and Eiserhardt, W. L. and Elliott, T. L. and Enquist, B. J. and Escudero, M. and Espinosa-Ruiz, S. and Fay, M. F. and Fernández, M. and Flanagan, N. S. and Forest, F. and Fowler, R. M. and Freiberg, M. and Gallagher, R. V. and Gaya, E. and Gehrke, B. and Gelwick, K. and Grace, O. M. and Granados Mendoza, C. and Grenié, M. and Groom, Q. J. and Hackel, J. and Hagen, E. R. and Hágsater, E. and Halley, J. M. and Hu, A.-Q and Jaramillo, C. and Kattge, J. and Keith, D. A. and Kirk, P. and Kissling, W. D. and Knapp, S. and Kreft, H. and Kuhnhäuser, B. G. and Larridon, I. and Leão, T. C. C. and Leitch, I. J. and Liimatainen, K. and Lim, J. Y. and Lucas, E. and Lücking, R. and Luján, M. and Luo, A. and Magallón, S. and Maitner, B. and Márquez-Corro, J. I. and Martín-Bravo, S. and Martins-Cunha, K. and Mashau, A. C. and Mauad, A. V. and Maurin, O. and Medina Lemos, R. and Merow, C. and Michelangeli, F. A. and Mifsud, J. C. O. and Mikryukov, V. and Moat, J. and Monro, A. K. and Muasya, A. M. and Mueller, G. M. and Muellner-Riehl, A. N. and Nargar, K. and Negrão, R. and Nicolson, N. and Niskanen, T. and Oliveira Andrino, C. and Olmstead, R. G. and Ondo, I. and Oses, L. and Parra-Sánchez, E. and Paton, A. J. and Pellicer, J. and Pellissier, L. and Pennington, T. D. and Pérez-Escobar, O. A. and Phillips, C. and Pironon, S. and Possingham, H. and Prance, G. and Przelomska, N. A. S. and Ramírez-Barahona, S. A. and Renner, S. S. and Rincon, M. and Rivers, M. C. and Rojas Andrés, B. M. and Romero-Soler, K. J. and Roque, N. and Rzedowski, J. and Sanmartín, I. and Santamaría-Aguilar, D. and Schellenberger Costa, D. and Serpell, E. and Seyfullah, L. J. and Shah, T. and Shen, X. and Silvestro, D. and Simpson, D. A. and Šmarda, P. and Šmerda, J. and Smidt, E. and Smith, S. A. and Solano-Gomez, R. and Sothers, C. and Soto Gomez, M. and Spalink, D. and Sperotto, P. and Sun, M. and Suz, L. M. and Svenning, J.-C. and Taylor, A. and Tedersoo, L. and Tietje, M. and Trekels, M. and Tremblay, R. L. and Turner, R. and Vasconcelos, T. and Veselý, P. and Villanueva, B. S. and Villaverde, T. and Vorontsova, M. S. and Walker, B. E. and Wang, Z. and Watson, M. and Weigelt, P. and Wenk, E. H. and Westrip, J. R. S. and Wilkinson, T. and Willett, S. D. and Wilson, K. L. and Winter, M. and Wirth, C. and Wölke, F. J. R. and Wright, I. J. and Zedek, F. and Zhigila, D. A. and Zimmermann, N. E. and Zuluaga, A. and Zuntini, A. R.},
+  title = {State of the World's Plants and Fungi, 2023},
+  journal   = {Royal Botanic Gardens, Kew},
+  month = {oct},
+  DOI = {10.34885/wnwn-6s63},
+  year = {2023},
+  preview   = {SOTWP2023.jpg},
+  html      = {https://www.kew.org/science/state-of-the-worlds-plants-and-fungi},
+}
+
+
 @article{Harvey2023a,
   title     = {Divergent Hepaciviruses, Delta-Like Viruses, and a Chu-Like Virus in Australian Marsupial Carnivores (Dasyurids)},
   volume    = {9},
@@ -65,18 +66,6 @@
   month     = {jul}
 }
 
-@article{Sadiq2023,
-  title     = {Australian Terrestrial Environments Harbour Extensive RNA Virus Diversity},
-  html       = {http://dx.doi.org/10.1101/2023.10.09.561620},
-  journal   = {bioRxiv},
-  DOI       = {10.1101/2023.10.09.561620},
-  publisher = {Cold Spring Harbor Laboratory},
-  author    = {Sadiq, Sabrina and Harvey, Erin and Mifsud, Jonathon C. O. and Minasny, Budiman and McBratney, Alex. B. and Pozza, Liana E. and Mahar, Jackie E. and Holmes, Edward C.},
-  year      = {2023},
-  preview   = {Sadiq2023.jpg},
-  month     = {oct}
-}
-
 @article{Costa2023a,
   title     = {Host Adaptive Radiation is Associated with Rapid Virus Diversification and Cross-Species Transmission in African Cichlid Fishes},
   html       = {http://dx.doi.org/10.1101/2023.06.28.546811},
@@ -88,6 +77,33 @@
   preview   = {Costa2023a.jpg},
   month     = {jun}
 }
+
+@article{Gallagher2023,
+  title     = {Global Shortfalls in Threat Assessments for Endemic Flora by Country},
+  journal   = {Plants People Planet},
+  year      = {2023},
+  month    = {apr},
+  html      = {https://nph.onlinelibrary.wiley.com/doi/full/10.1002/ppp3.10369},
+  volume    = {5},
+  number    = {6},
+  pages     = {885-898},
+  preview   = {Gallagher2023.jpg},
+  author    = {Gallagher, R.V. and Allen, S.P. and Govaerts, R. and Rivers, M.C. and Allen, A.P. and Keith, D.A. and Merow, C. and Maitner, B. and Butt, N. and Auld, T.D. and Enquist, B.J. and Eiserhardt, W.L. and Wright, I.J. and Mifsud, J.C.O. and Espinosa-Ruiz, S. and Possingham, H. and Adams, V.M.}
+}
+
+@article{Costa2023,
+  title     = {Limited Cross-Species Virus Transmission in a Spatially Restricted Coral Reef Fish Community},
+  journal   = {Virus Evolution},
+  html      = {https://academic.oup.com/ve/article/9/1/vead011/7023158},
+  year      = {2023},
+  month    = {feb},
+  volume    = {9},
+  number    = {1},
+  preview   = {Costa2023.jpg},
+  author    = {Costa, V.A. and Bellwood, D.R. and Mifsud, J.C.O. and Van Brussel, K. and Geoghegan, J.L. and Holmes, E.C. and Harvey, E.}
+}
+
+
 
 @article{Mifsud2023b,
   title     = {Transcriptome Mining Extends the Host Range of the Flaviviridae to Non-Bilaterians},
