--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,3 +1,37 @@
+@article{petrone202439,
+  title={A 39.8 kb flavi-like virus uses a novel strategy for overcoming the RNA virus error threshold},
+  author={Petrone, Mary E and Grove, Joe and Mifsud, Jonathon CO and Parry, Rhys H and Marzinelli, Ezequiel M and Holmes, Edward C},
+  journal={bioRxiv},
+  html       = {https://www.biorxiv.org/content/10.1101/2024.01.08.574764v1.abstract},
+  pages={2024--01},
+  year={2024},
+  preview={F1.large.jpg},
+  publisher={Cold Spring Harbor Laboratory}
+}
+
+@article{mifsud2024mapping,
+  title={Mapping glycoprotein structure reveals defining events in the evolution of the Flaviviridae},
+  author={Mifsud, Jonathon CO and Lytras, Spyros and Oliver, Michael R and Toon, Kamilla and Costa, Vincenzo A and Holmes, Edward C and Grove, Joe},
+  journal={bioRxiv},
+  pages={2024--02},
+  html       = {https://www.biorxiv.org/content/10.1101/2024.02.06.579159v1.abstract},
+  year={2024},
+  preview   = {structures.png},
+  selected={true},
+  publisher={Cold Spring Harbor Laboratory}
+}
+
+@article{sadiq2024australian,
+  title={Australian terrestrial environments harbour extensive RNA virus diversity},
+  author={Sadiq, Sabrina and Harvey, Erin and Mifsud, Jonathon CO and Minasny, Budiman and McBratney, Alex B and Pozza, Liana E and Mahar, Jackie E and Holmes, Edward C},
+  journal={Virology},
+  pages={110007},
+  html       = {https://www.sciencedirect.com/science/article/pii/S004268222400028X},
+  year={2024},
+  preview   = {Sadiq2023.jpg},
+  publisher={Elsevier}
+}
+
 @article{Mifsud2023a,
   title     = {Identification of a Novel Papillomavirus from a New Zealand Fur Seal (Arctocephalus forsteri) with Oral Papilloma-Like Lesions},
   html       = {http://dx.doi.org/10.1101/2023.11.20.567757},
@@ -24,18 +58,6 @@
   author    = {Petrone, Mary E. and Parry, Rhys and Mifsud, Jonathon C. O. and Van Brussel, Kate and Voorhees, Ian E. H. and Richards, Zoe T. and Holmes, Edward C.},
   year      = {2023},
   preview   = {Petrone2023.jpg},
-  month     = {oct}
-}
-
-@article{Sadiq2023,
-  title     = {Australian Terrestrial Environments Harbour Extensive RNA Virus Diversity},
-  html       = {http://dx.doi.org/10.1101/2023.10.09.561620},
-  journal   = {bioRxiv},
-  DOI       = {10.1101/2023.10.09.561620},
-  publisher = {Cold Spring Harbor Laboratory},
-  author    = {Sadiq, Sabrina and Harvey, Erin and Mifsud, Jonathon C. O. and Minasny, Budiman and McBratney, Alex. B. and Pozza, Liana E. and Mahar, Jackie E. and Holmes, Edward C.},
-  year      = {2023},
-  preview   = {Sadiq2023.jpg},
   month     = {oct}
 }
 
