update_cv_july2024

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -32,18 +32,60 @@
   publisher={Elsevier}
 }
 
-@article{Mifsud2023a,
-  title     = {Identification of a Novel Papillomavirus from a New Zealand Fur Seal (Arctocephalus forsteri) with Oral Papilloma-Like Lesions},
-  html       = {http://dx.doi.org/10.1101/2023.11.20.567757},
-  supp    = {https://github.com/JonathonMifsud/Identification-of-a-novel-papillomavirus-in-a-New-Zealand-Fur-seal-with-oral-papilloma},
-  DOI       = {10.1101/2023.11.20.567757},
-  journal   = {bioRxiv},
-  publisher = {Cold Spring Harbor Laboratory},
-  author    = {Mifsud, Jonathon C.O. and Hall, Jane and Van Brussel, Kate and Rose, Karrie and Parry, Rhys H. and Holmes, Edward C. and Harvey, Erin},
-  year      = {2023},
+@article{mifsud2024novel,
+  title={A novel papillomavirus in a New Zealand fur seal (Arctocephalus forsteri) with oral lesions},
+  author={Mifsud, Jonathon CO and Hall, Jane and Van Brussel, Kate and Rose, Karrie and Parry, Rhys H and Holmes, Edward C and Harvey, Erin},
+  html       = {https://www.nature.com/articles/s44298-024-00020-w#citeas},
+  supp    = {https://github.com/JonathonMifsud/A-novel-papillomavirus-in-a-New-Zealand-fur-seal-Arctocephalus-forsteri-with-oral-lesions},
+  journal={npj Viruses},
+  volume={2},
+  number={1},
+  pages={10},
+  year={2024},
   preview  = {Mifsud2023a.jpg},
   selected={true},
-  month     = {nov}
+  publisher={Nature Publishing Group UK London},
+  month     = {mar}
+}
+
+@article {Costa2024.02.24.581894,
+	author = {Costa, Vincenzo A. and Bellwood, David R. and Mifsud, Jonathon C.O. and Geoghegan, Jemma L. and Harvey, Erin and Holmes, Edward C.},
+	title = {Limited transmission of microbial species among coral reef fishes from the Great Barrier Reef, Australia},
+	elocation-id = {2024.02.24.581894},
+	year = {2024},
+  month = {feb},
+  preview  = {Costa2024.jpg},
+	doi = {10.1101/2024.02.24.581894},
+	publisher = {Cold Spring Harbor Laboratory},
+	URL = {https://www.biorxiv.org/content/early/2024/02/25/2024.02.24.581894},
+	html = {https://www.biorxiv.org/content/early/2024/02/25/2024.02.24.581894.full.pdf},
+	journal = {bioRxiv}
+}
+
+@article{charon2024consensus,
+  title={Consensus statement from the first RdRp Summit: advancing RNA virus discovery at scale across communities},
+  author={Charon, Justine and Olendraite, Ingrida and Forgia, Marco and Chong, Li Chuin and Hillary, Luke S and Roux, Simon and Kupczok, Anne and Debat, Humberto and Sakaguchi, Shoichi and Tahzima, Rachid and others},
+  journal={Frontiers in Virology},
+  volume={4},
+  pages={1371958},
+  preview  = {Charon2024.jpg},
+  year={2024},
+  html={https://www.frontiersin.org/articles/10.3389/fviro.2024.1371958/full},
+  publisher={Frontiers Media SA}
+}
+
+@article{costa2024host,
+  title={Host adaptive radiation is associated with rapid virus diversification and cross-species transmission in African cichlid fishes},
+  author={Costa, Vincenzo A and Ronco, Fabrizia and Mifsud, Jonathon CO and Harvey, Erin and Salzburger, Walter and Holmes, Edward C},
+  journal={Current Biology},
+  volume={34},
+  number={6},
+  pages={1247--1257},
+  year={2024},
+  publisher={Elsevier},
+  month={mar},
+  html={https://www.cell.com/current-biology/fulltext/S0960-9822(24)00150-7},
+  preview   = {Costa2023a.jpg},
 }
 
 @article{Petrone2023,
