update cv and papers sep 2024

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,24 +1,24 @@
 @article{petrone202439,
-  title={A 39.8 kb flavi-like virus uses a novel strategy for overcoming the RNA virus error threshold},
-  author={Petrone, Mary E and Grove, Joe and Mifsud, Jonathon CO and Parry, Rhys H and Marzinelli, Ezequiel M and Holmes, Edward C},
-  journal={bioRxiv},
-  html       = {https://www.biorxiv.org/content/10.1101/2024.01.08.574764v1.abstract},
-  pages={2024--01},
+  title={A ~40-kb flavi-like virus does not encode a known error-correcting mechanism},
+  author={Petrone, Mary E, Mélade, Julian and Grove, Joe and Mifsud, Jonathon CO and Parry, Rhys H and Marzinelli, Ezequiel M and Holmes, Edward C},
+  journal={Proceedings of the National Academy of Sciences},
+  html       = {https://www.pnas.org/doi/abs/10.1073/pnas.2403805121},
+  pages={121.30},
   year={2024},
   preview={F1.large.jpg},
-  publisher={Cold Spring Harbor Laboratory}
+  publisher={National Academy of Sciences}
 }
 
 @article{mifsud2024mapping,
-  title={Mapping glycoprotein structure reveals defining events in the evolution of the Flaviviridae},
+  title={Mapping glycoprotein structure reveals Flaviviridae evolutionary history},
   author={Mifsud, Jonathon CO and Lytras, Spyros and Oliver, Michael R and Toon, Kamilla and Costa, Vincenzo A and Holmes, Edward C and Grove, Joe},
-  journal={bioRxiv},
-  pages={2024--02},
-  html       = {https://www.biorxiv.org/content/10.1101/2024.02.06.579159v1.abstract},
+  journal={Nature},
+  pages={1-9},
+  html       = {https://www.nature.com/articles/s41586-024-07899-8/},
   year={2024},
   preview   = {structures.png},
   selected={true},
-  publisher={Cold Spring Harbor Laboratory}
+  publisher={Nature Publishing Group UK London}
 }
 
 @article{sadiq2024australian,
